--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.3.12"
+version = "1.3.13-dev"
 group = "cr0s.warpdrive" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "WarpDrive"
 
