--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ processResources
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
+        exclude '**/*.pdn'
+        exclude '**/*.psd'
 
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
