--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,25 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.3.17-dev"
+// define the properties file
+ext.configFile = file "build.properties"
+
+configFile.withReader {
+    // read config.  it shall from now on be referenced as simply config or as project.config
+    def prop = new Properties()
+    prop.load(it)
+    ext.config = new ConfigSlurper().parse prop
+}
+
 group = "cr0s.warpdrive" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "${config.minecraft_version}-${config.mod_version}.${System.getenv("BUILD_NUMBER") ?: '-'}"
 archivesBaseName = "WarpDrive"
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 minecraft {
-    version = "1.7.10-10.13.4.1492-1.7.10"
+    version = config.minecraft_version + "-" + config.forge_version
     runDir = "eclipse"
 
     // replacing
@@ -55,13 +65,15 @@ processResources
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
-        exclude '**/*.pdn'
-        exclude '**/*.psd'
+	
+	// skip source assets
+    exclude '**/*.pdn'
+    exclude '**/*.psd'
 
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-                
+        
         // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
@@ -73,7 +85,7 @@ processResources
 }
 
 jar {
-        manifest {
+    manifest {
         attributes 'FMLCorePlugin': 'cr0s.warpdrive.core.FMLLoadingPlugin',
                         'FMLCorePluginContainsFMLMod': 'true'
     }
