Fixed star entity crash with small packs
AT wasn't declared so we were dependant on other mods

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ processResources
 
 jar {
     manifest {
+        attributes 'FMLAT': 'CoFH_at.cfg'
         attributes 'FMLCorePlugin': 'cr0s.warpdrive.core.FMLLoadingPlugin',
                         'FMLCorePluginContainsFMLMod': 'true'
     }
