--- a/build.gradle
+++ b/build.gradle
@@ -91,3 +91,9 @@ jar {
                         'FMLCorePluginContainsFMLMod': 'true'
     }
 }
+
+idea {
+    module {
+        inheritOutputDirs = true
+    }
+}
