--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 #
-minecraft_version=1.7.10
-forge_version=10.13.4.1492-1.7.10
-mod_version=1.3.23-dev
+minecraft_version=1.10.2
+forge_version=12.18.1.2014
+mod_version=1.4.0-dev
