Updated ImmersiveEngineering to 0.10+ with Maven
Updated OpenComputers to 1.6.0+ with Maven

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,29 @@ minecraft {
     replaceIn "MyDummyModContainer.java"
 }
 
+repositories {
+    maven { // JEI & Tinkers
+        name 'DVS1 Maven FS'
+        url 'http://dvs1.progwml6.com/files/maven'
+    }
+    maven { // WAILA
+        name "ProfMobius Maven FS"
+        url "http://mobiusstrip.eu/maven"
+    }
+    maven { // OpenComputers
+        name "OpenComputers"
+        url "http://maven.cil.li/"
+    }
+    maven { // TOP
+        name 'tterrag maven'
+        url "http://maven.tterrag.com/"
+    }
+    maven { // CraftTweaker (aka MineTweaker3), Immersive Engineering
+        name 'jared maven'
+        url "http://blamejared.com/maven"
+    }
+}
+
 dependencies {
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
@@ -63,6 +86,14 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+	deobfCompile "blusunrize:ImmersiveEngineering:0.10-+:deobf"
+//  deobfCompile "mezz.jei:jei_1.10.2:3.13.+"
+//  deobfCompile "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
+//  deobfCompile "slimeknights.mantle:Mantle:1.10.2-1.+"
+//  deobfCompile "slimeknights:TConstruct:1.10.2-2.5.6.+"
+    deobfCompile "li.cil.oc:OpenComputers:MC1.10.2-1.6.0.+"
+//  deobfCompile "mcjty.theoneprobe:TheOneProbe:1.10-1.0.13-26"
+//  deobfCompile "MineTweaker3:MineTweaker3-API:3.0.14.59"
 }
 
 processResources {
