--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,10 @@ repositories {
         name 'jared maven'
         url "http://blamejared.com/maven"
     }
+    maven { // MCMultiPart
+        name 'amadornes maven'
+        url "http://maven.amadornes.com/"
+    }
 }
 
 dependencies {
@@ -86,14 +90,15 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-	deobfCompile "blusunrize:ImmersiveEngineering:0.10-+:deobf"
-//  deobfCompile "mezz.jei:jei_1.10.2:3.13.+"
-//  deobfCompile "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
-//  deobfCompile "slimeknights.mantle:Mantle:1.10.2-1.+"
-//  deobfCompile "slimeknights:TConstruct:1.10.2-2.5.6.+"
+	compileOnly "blusunrize:ImmersiveEngineering:0.10-+:deobf"
+//  compileOnly "mezz.jei:jei_1.10.2:3.13.+"
+//  compileOnly "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
+//  compileOnly "slimeknights.mantle:Mantle:1.10.2-1.+"
+//  compileOnly "slimeknights:TConstruct:1.10.2-2.5.6.+"
     deobfCompile "li.cil.oc:OpenComputers:MC1.10.2-1.6.0.+"
-//  deobfCompile "mcjty.theoneprobe:TheOneProbe:1.10-1.0.13-26"
-//  deobfCompile "MineTweaker3:MineTweaker3-API:3.0.14.59"
+//  compileOnly "mcjty.theoneprobe:TheOneProbe:1.10-1.0.13-26"
+//  compileOnly "MineTweaker3:MineTweaker3-API:3.0.14.59"
+    compileOnly "MCMultiPart:MCMultiPart:1.3.0+:universal"
 }
 
 processResources {
