Added LUA scripts for transporter room

--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,7 @@ processResources {
 //copies the commons folder to all instances
 task copyOpenComputersCommons1(type: Copy) {
     from 'src/main/resources/assets/warpdrive/lua.OpenComputers/common'
-    into('build/resources/main/assets/warpdrive/lua.OpenComputers/warpdriveShipController')
+    into('build/resources/main/assets/warpdrive/lua.OpenComputers/warpdriveAccelerator')
 }
 task copyOpenComputersCommons2(type: Copy) {
     from 'src/main/resources/assets/warpdrive/lua.OpenComputers/common'
@@ -93,15 +93,19 @@ task copyOpenComputersCommons2(type: Copy) {
 }
 task copyOpenComputersCommons3(type: Copy) {
     from 'src/main/resources/assets/warpdrive/lua.OpenComputers/common'
-    into('build/resources/main/assets/warpdrive/lua.OpenComputers/warpdriveWeaponController')
+    into('build/resources/main/assets/warpdrive/lua.OpenComputers/warpdriveShipController')
 }
 task copyOpenComputersCommons4(type: Copy) {
     from 'src/main/resources/assets/warpdrive/lua.OpenComputers/common'
-    into('build/resources/main/assets/warpdrive/lua.OpenComputers/warpdriveAccelerator')
+    into('build/resources/main/assets/warpdrive/lua.OpenComputers/warpdriveTransporterCore')
+}
+task copyOpenComputersCommons5(type: Copy) {
+    from 'src/main/resources/assets/warpdrive/lua.OpenComputers/common'
+    into('build/resources/main/assets/warpdrive/lua.OpenComputers/warpdriveWeaponController')
 }
 
 jar {
-    dependsOn copyOpenComputersCommons1, copyOpenComputersCommons2, copyOpenComputersCommons3, copyOpenComputersCommons4
+    dependsOn copyOpenComputersCommons1, copyOpenComputersCommons2, copyOpenComputersCommons3, copyOpenComputersCommons4, copyOpenComputersCommons5
     
     manifest {
         attributes 'FMLAT': 'WarpDrive_at.cfg'
