--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -40,9 +40,9 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20160717"
+    mappings = "snapshot_20180605"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-
+	
     // replacing
     replace "@version@", project.version
     replaceIn "WarpDrive.java"
@@ -74,6 +74,14 @@ repositories {
         name 'amadornes maven'
         url "http://maven.amadornes.com/"
     }
+    maven {
+        name = "CoFH Maven"
+        url = "http://maven.covers1624.net"
+    }
+	maven {
+		name = "dmod's BuildBroken maven"
+		url = "http://api.dmodoomsirius.me"
+	}
 }
 
 dependencies {
@@ -90,15 +98,17 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-    compileOnly "blusunrize:ImmersiveEngineering:0.10-+:deobf"
+    compileOnly "cofh:RedstoneFlux:1.12-2.0.0.1:universal"
+    compileOnly "blusunrize:ImmersiveEngineering:0.12-+:deobf"
 //  compileOnly "mezz.jei:jei_1.10.2:3.13.+"
 //  compileOnly "mcp.mobius.waila:Waila:1.7.0-B3_1.9.4"
 //  compileOnly "slimeknights.mantle:Mantle:1.10.2-1.+"
 //  compileOnly "slimeknights:TConstruct:1.10.2-2.5.6.+"
-    deobfCompile "li.cil.oc:OpenComputers:MC1.10.2-1.7.2.+"
+    deobfCompile "li.cil.oc:OpenComputers:MC1.12.2-1.7.2.+"
 //  compileOnly "mcjty.theoneprobe:TheOneProbe:1.10-1.0.13-26"
 //  compileOnly "MineTweaker3:MineTweaker3-API:3.0.14.59"
-    compileOnly "MCMultiPart:MCMultiPart:1.3.0+:universal"
+    compileOnly "MCMultiPart2:MCMultiPart-exp:2.5.1+"
+	compileOnly "com.builtbroken.icbm-classic:ICBM-classic:1.12.2-3.0.+"
 }
 
 processResources {
