--- a/src/main/resources/assets/warpdrive/blockstates/projector.basic.json
+++ b/src/main/resources/assets/warpdrive/blockstates/projector.basic.json
@@ -11,7 +11,15 @@
 	},
 	"variants": {
 		"normal": [{}],
-		"inventory": [{}],
+		"inventory": [{
+			"transform": {
+				"gui": {
+					"rotation": [ 30, 135, 90 ],
+					"translation": [ 0, 0, 0 ],
+					"scale": 0.875
+				}
+			}
+		}],
 		"facing": {
 			"down" : { "x": 180 },
 			"up"   : { },
