--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,13 @@
 #
 minecraft_version=1.12.2
-forge_version=14.23.4.2739
+mappings_version=snapshot_20180729
+forge_version=14.23.4.2744
+
+CoFHCore_version=1.12.2-4.5.2.19
+CodeChickenLib_version=1.12.2-3.2.0.345
+ICBMclassic_version=1.12.2-3.0.+
+ImmersiveEngineering_version=0.12-+
+OpenComputers_version=MC1.12.2-1.7.2.+
+RedstoneFlux_version=1.12-2.0.2.3
+
 mod_version=1.5.0
